--- a/pages/mine/suppages/live-management/live-push/components/pusher-room/index.wxml
+++ b/pages/mine/suppages/live-management/live-push/components/pusher-room/index.wxml
@@ -1,15 +1,22 @@
 <wxs module="NUM" src="/utils/filters/num.wxs" />
 
 <i-pusher src="{{roomInfo.pushUrl}}" start="{{start}}" stop="{{stop}}">
-  <view class="inner">
-    <i-praise 
-      class="i-praise {{roomInfo.direction === 2 ? 'full-screen' : ''}}" 
-      wx:if="{{start}}"
-      count="{{praiseCount}}" 
-      manual="{{manualPraise}}" 
-    />
+  <view 
+    class="inner {{roomInfo.direction === 2 ? 'horizontal' : ''}}"
+    style="top: {{roomInfo.direction === 2 ? 8 : statusBarHeight}}px;"
+  >
+    <view class="praise-animation-wrap">
+      <praise-animation wx:if="{{start}}" count="{{praiseCount}}" manual="{{manualPraise}}" />
+    </view>
     
-    <view class="header" style="padding: {{roomInfo.direction === 2 ? 8 : statusBarHeight}}px {{roomInfo.direction === 2 ? 30 : 8}}px 0;">
+    <view 
+      class="header" 
+      style="{{
+        roomInfo.direction === 2 
+          ? 'padding: 8px 30px 0;' 
+          : 'padding: ' + statusBarHeight + 'px 8px 0;'
+      }}"
+    >
       <view class="nav-bar">
         <i-back-icon custom bind:navigateBack="showQuitModal"/>
         <i-anchor-capsule roomInfo="{{roomInfo}}" />
@@ -31,7 +38,7 @@
 
     <count-down wx:if="{{countdownVisible && !start}}" />
 
-    <view class="footer {{roomInfo.direction === 2 ? 'full-screen' : ''}}">
+    <view class="footer {{roomInfo.direction === 2 ? 'horizontal' : ''}}">
       <view class="audience-action-tips {{audienceActionTips.type}} {{showAudienceActionTips ? 'show' : ''}}">{{audienceActionTips.message}}</view>
       <i-comment wx:if="{{start}}" fullScreen="{{fullScreen ? '1' : '0'}}" isAnchor />
 
