--- a/pages/mine/suppages/live-management/live-push/components/push-room/index.wxss
+++ b/pages/mine/suppages/live-management/live-push/components/push-room/index.wxss
@@ -56,12 +56,11 @@
 .start-btn {
   margin: 0 auto;
   width: 274px;
-  height: 55px;
-  color: var(--black);
-  font-size: 21px;
-  font-weight: bold;
-  background: var(--gradient-gold);
-  border-radius: 27.5px;
+  height: 44px;
+  color: #fff;
+  font-size: 16px;
+  background: #161F4E;
+  border-radius: 22px;
 }
 
 .btns-wrap {
