--- a/pages/mine/suppages/live-management/live-push/components/push-room/index.wxss
+++ b/pages/mine/suppages/live-management/live-push/components/push-room/index.wxss
@@ -1,3 +1,9 @@
+.praise-animation-wrap {
+  position: absolute;
+  right: 0;
+  bottom: calc(57px + env(safe-area-inset-bottom));
+}
+
 .inner {
   position: absolute;
   left: 8px;
@@ -71,7 +77,7 @@
 }
 
 .btns-wrap {
-  margin-top: 20px;
+  margin-top: 8px;
 }
 .input-btn {
   display: flex;
@@ -121,12 +127,6 @@
   border-radius: 7px;
   background: #fff;
   white-space: nowrap;
-}
-
-.praise-animation-wrap {
-  position: absolute;
-  right: 0;
-  top: -104px;
 }
 
 /* 用户加入购物车，关注，下单 */
