--- a/pages/mine/suppages/live-management/live-push/components/push-room/index.wxml
+++ b/pages/mine/suppages/live-management/live-push/components/push-room/index.wxml
@@ -2,9 +2,9 @@
 
 <live-push src="{{roomInfo.pushUrl || ''}}" start="{{start}}" stop="{{stop}}">
   <view class="praise-animation-wrap">
-    <praise-animation count="{{praiseCount}}" manual="{{manualPraise}}" />
+    <praise-animation count="{{praiseCount || 0}}" manual="{{manualPraise}}" />
   </view>
-  
+
   <view 
     class="inner {{roomInfo.direction === 2 ? 'horizontal' : ''}}"
     style="top: {{roomInfo.direction === 2 ? 8 : statusBarHeight}}px;"
