feat: 自定义组件更换名字

--- a/pages/mine/suppages/live-management/live-push/components/push-room/index.wxml
+++ b/pages/mine/suppages/live-management/live-push/components/push-room/index.wxml
@@ -66,7 +66,7 @@
 <beauty-popup wx:if="{{beautyPopupVisible}}" bind:hide="hideModal" />
 <goods-shelves-popup wx:if="{{goodsShelvesPopupVisible}}" roomInfo="{{roomInfo}}" bind:hide="hideModal" bind:getRecommendGood="getRecommendGood" />
 
-<i-mask 
+<mask 
   wx:if="{{inputVisible || quitModalVisible || posterModalVisible}}" 
   filter="{{posterModalVisible}}"
   opcity="{{inputVisible ? 0 : 0.3}}"
