--- a/pages/mall/subpages/goods/subpages/goods-detail/index.wxml
+++ b/pages/mall/subpages/goods/subpages/goods-detail/index.wxml
@@ -115,7 +115,7 @@
 </view>
 
 <!-- 遮罩 -->
-<i-mask wx:if="{{showMask}}" bindtap="hideModal" opcity="{{posterModalVisible ? 0.6 : 0.3}}"/>
+<mask wx:if="{{showMask}}" bindtap="hideModal" opcity="{{posterModalVisible ? 0.6 : 0.3}}"/>
 
 <!-- 商品规格选择弹窗 -->
 <spec-popup
