--- a/components/live/comment-showcase/index.wxss
+++ b/components/live/comment-showcase/index.wxss
@@ -1,4 +1,4 @@
-.comment {
+.comment-showcase {
   position: relative;
   margin-bottom: 5px;
   width: 273px;
@@ -6,14 +6,14 @@
   overflow-y: scroll;
   mask-image: linear-gradient(180deg,transparent,#000 20%);
 }
-.comment.full {
+.comment-showcase.full-screen {
   max-height: 215px;
 }
 
-.msg-lists {
+.comment-list {
   height: fit-content;
 }
-.msg-list {
+.comment {
   margin-bottom: 6px;
   padding: 9px 8px;
   width: fit-content;
@@ -23,7 +23,7 @@
   border-radius: 10px;
   background-color: rgba(0, 0, 0, 0.3);
 }
-.msg-list:last-child {
+.comment:last-child {
   margin-bottom: 0;
 }
 
@@ -60,12 +60,12 @@
   background: #FFBCDF;
 }
 
-.msg-user-name {
+.nickname {
   margin-right: 5px;
   color: #FDDF6A;
   vertical-align: top;
 }
-.message-content {
+.content {
   vertical-align: top;
   color: #fff;
 }
