--- a/components/live/comment-showcase/index.wxml
+++ b/components/live/comment-showcase/index.wxml
@@ -13,7 +13,7 @@
   <view class="comment-list">
     <view class="comment" wx:if="{{index >= (liveMsgList.length - 10 * multiple)}}" wx:for="{{liveMsgList}}" wx:key="index">
       <image class="avatar" wx:if="{{item.avatar}}" src="{{item.avatar}}" />
-      <text class="nickname" wx:if="{{item.nick_name}}">{{item.nickname}}</text>
+      <text class="nickname" wx:if="{{item.nickname}}">{{item.nickname}}</text>
       <text class="tag anchor" wx:if="{{item.identity === 2}}">主播</text>
       <text class="content">{{item.content}}</text>
     </view>
