--- a/pages/tab-bar-pages/mine/index.wxml
+++ b/pages/tab-bar-pages/mine/index.wxml
@@ -29,11 +29,11 @@
     <view class="introduce">来一段简短的自我介绍吧～</view>
 
     <view class="function-wrap">
-      <navigator class="function-item" url="./suppages/order-list/index" hover-class="none">
+      <navigator class="function-item" url="/pages/subpages/mine/order-list/index" hover-class="none">
         <image class="function-icon" src="./images/order.png" />
         <view class="function-desc">我的订单</view>
       </navigator>
-      <navigator class="function-item" url="./suppages/address-list/index" hover-class="none">
+      <navigator class="function-item" url="/pages/subpages/mine/address-list/index" hover-class="none">
         <image class="function-icon" src="./images/address.png" />
         <view class="function-desc">收货地址</view>
       </navigator>
@@ -41,7 +41,7 @@
         <image class="function-icon" src="./images/live.png" />
         <view class="function-desc">我的直播</view>
       </view>
-      <navigator class="function-item" wx:if="{{userInfo.shopId}}" url="./suppages/shop-management/index" hover-class="none">
+      <navigator class="function-item" wx:if="{{userInfo.shopId}}" url="/pages/subpages/mine/shop-management/index" hover-class="none">
         <image class="function-icon" src="./images/shop.png" />
         <view class="function-desc">我的店铺</view>
       </navigator>
