refactor: 项目调整为分包结构

--- a/custom-tab-bar/index.wxml
+++ b/custom-tab-bar/index.wxml
@@ -1,14 +1,14 @@
 <view class="tab-bar">
   <view class="tab" bindtap="switchTab" data-path="/pages/tab-bar-pages/home/index">
-    <image class="icon" src="/images/tab-bar/home{{tabType === 'home' ? '-fill' : ''}}.png" />
+    <image class="icon" src="/images/tab-bar/home{{tabType === 'home' ? '_fill' : ''}}.png" />
     <view class="text {{tabType === 'home' ? 'selected' : ''}}">首页</view>
   </view>
   <view class="tab" bindtap="switchTab" data-path="/pages/tab-bar-pages/mall/index">
-    <image class="icon" src="/images/tab-bar/home{{tabType === 'home' ? '-fill' : ''}}.png" />
+    <image class="icon" src="/images/tab-bar/mall{{tabType === 'mall' ? '_fill' : ''}}.png" />
     <view class="text {{tabType === 'home' ? 'selected' : ''}}">商城</view>
   </view>
   <view class="tab" bindtap="switchTab" data-path="/pages/tab-bar-pages/mine/index">
-    <image class="icon" src="/images/tab-bar/mine{{tabType === 'mine' ? '-fill' : ''}}.png" />
+    <image class="icon" src="/images/tab-bar/mine{{tabType === 'mine' ? '_fill' : ''}}.png" />
     <view class="text {{tabType === 'mine' ? 'selected' : ''}}">我的</view>
   </view>
 </view>
