--- a/pages/subpages/mine/shop-management/components/order-list/index.wxml
+++ b/pages/subpages/mine/shop-management/components/order-list/index.wxml
@@ -1,4 +1,4 @@
-<wxs module="ORDER" src="../../../../utils/order.wxs" />
+<wxs module="ORDER" src="../../../utils/order.wxs" />
 
 <view class="order-list">
   <view class="order-item" wx:for="{{list}}" wx:key="index" catchtap="navToDetail" data-id="{{item.id}}">
