--- a/pages/subpages/mall/goods/index.wxml
+++ b/pages/subpages/mall/goods/index.wxml
@@ -5,7 +5,7 @@
       <image class="search-icon" src="/images/search.png" />
       <text class="placeholder">搜索商品</text>
     </view>
-    <navigator class="cart-icon-wrap" url="/pages/mall/subpages/goods/subpages/cart/index" hover-class="none">
+    <navigator class="cart-icon-wrap" url="./subpages/cart/index" hover-class="none">
       <image class="cart-icon" src="./images/cart.png"/>
       <view class="cart-count" wx:if="{{cartGoodsNumber}}">{{cartGoodsNumber}}</view>
     </navigator>
