--- a/pages/subpages/home/note/index.wxml
+++ b/pages/subpages/home/note/index.wxml
@@ -1,7 +1,7 @@
 <view class="nav-bar" style="padding-top: {{statusBarHeight}}px;">
   <image class="back-icon" bindtap="navBack" src="/images/back.png" />
   <view class="avatar-wrap" bindtap="navToUserCenter">
-    <image class="author-avatar" src="http://img.ubo.vip/youlian/temporary/avatar_2.png" />
+    <image class="author-avatar avatar-default" src="" />
     <image class="follow-icon" wx:if="{{!follow}}" catchtap="follow" src="./images/follow.png" />
   </view>
   <view class="name-wrap" bindtap="navToUserCenter">
@@ -15,7 +15,7 @@
 
 <view class="bottom-bar">
   <view class="comment-btn">
-    <image class="user-avatar" src="/images/default-avatar.png" />
+    <image class="user-avatar avatar-default" src="" />
     <view class="comment-btn-desc">添加评论...</view>
   </view>
   <view class="other-btns">
