--- a/pages/subpages/home/strategy/components/strategy-item/index.wxml
+++ b/pages/subpages/home/strategy/components/strategy-item/index.wxml
@@ -37,7 +37,7 @@
   
   <view class="btn-wrap">
     <view class="comment-btn">
-      <image class="user-avatar" src="/images/default-avatar.png" />
+      <image class="user-avatar avatar-default" src="" />
       <view class="comment-btn-desc">添加评论...</view>
     </view>
     <view class="other-btns">
