refactor: 项目调整为分包结构

--- a/pages/subpages/mine/live-management/live-push/components/push-room/index.wxml
+++ b/pages/subpages/mine/live-management/live-push/components/push-room/index.wxml
@@ -54,7 +54,7 @@
 </live-push>
 
 <i-share-popup wx:if="{{shareModalVisible}}" roomId="{{roomInfo.id}}" bind:showPosterModal="showPosterModal" bind:hide="hideModal" />
-<i-features-popup 
+<more-features-popup 
   wx:if="{{moreFeaturesPopupVisible}}"
   roomInfo="{{roomInfo}}"
   bind:showSubscribePopup="showSubscribeRemindPopup" 
