--- a/pages/tab-bar-pages/mall/index.wxss
+++ b/pages/tab-bar-pages/mall/index.wxss
@@ -2,6 +2,10 @@ page {
   background: #fff;
 }
 
+.container {
+  padding-bottom: calc(48px + env(safe-area-inset-bottom));
+}
+
 .nav-bar {
   position: fixed;
   display: flex;
