--- a/pages/tab-bar-pages/mine/index.wxss
+++ b/pages/tab-bar-pages/mine/index.wxss
@@ -30,6 +30,7 @@
   position: relative;
   font-size: 0;
   overflow: hidden;
+  padding-bottom: calc(48px + env(safe-area-inset-bottom));
 }
 .bg {
   position: absolute;
