--- a/pages/subpages/mine/live-management/live-push/components/push-room/index.wxss
+++ b/pages/subpages/mine/live-management/live-push/components/push-room/index.wxss
@@ -90,12 +90,37 @@
   border-radius: 18px;
   background: rgba(0, 0, 0, 0.3);
 }
+.chat-icon {
+  margin-right: 5px;
+  width: 26px;
+  height: 26px;
+}
 .feature-btn {
   position: relative;
   margin-left: 8px;
   width: 35px;
   height: 35px;
   overflow: initial;
+  background: rgba(0, 0, 0, 0.3);
+  border-radius: 50%;
+}
+.goods-icon {
+  width: 23px;
+  height: 23px;
+}
+.more-icon {
+  width: 30px;
+  height: 30px;
+}
+.share-icon {
+  margin-right: 1px;
+  width: 22px;
+  height: 22px;
+}
+.praise-icon {
+  margin-bottom: 1px;
+  width: 24px;
+  height: 24px;
 }
 .praise-icon.hover {
   animation: scaleDraw 1s ease-in-out; 
